[package]
authors = ["Patrick \"Waaghals\" Berenschot <waaghals@protonmail.com>"]
edition = "2018"
homepage = "https://waaghals.dev/doe"
license = "MIT"
name = "doe"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.51"
bytes = "1.0.1"
clap-verbosity-flag = "0.3.1"
directories = "4.0.1"
flate2 = "1.0.20"
futures-util = "0.3.15"
interprocess = "1.1.1"
log = "0.4.14"
nix = "0.22.0"
oci_spec = {git = "https://github.com/containers/oci-spec-rs", rev = "e0de21b89dc1e65f69a5f45a08bbe426787c7fa1"}
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.66"
sha2 = "0.9.5"
simplelog = "0.10.0"
structopt = "0.3"
tar = "0.4.37"
termion = "1.5.6"
thiserror = "1.0.26"
tokio = {version = "1.8.1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "process"]}
toml = "0.5.8"
# shellexpand = "2.0.0"
# walkdir = "2.3.1"
tokio-stream = {version = "0.1.7", features = ["net", "io-util"]}
tokio-util = {version = "0.6.7", features = ["codec"]}
# uds = {version="0.2.6"}
tower = "0.4.11"
tower-http = {version="0.2.0", features = ["follow-redirect", "decompression-full", "set-header", "trace", "util"]}
hyper = {version = "0.14.6", features = ["client", "http1", "http2", "runtime", "stream"]}
http = "0.2.5"
const_format = { version="0.2.22", features = ["fmt"] }
# hyper-tls = "0.5.0"
hyper-rustls = {version = "0.23.0", features = ["http2"]}
itertools = "0.10.3"
hyper-trust-dns-connector = "0.3.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
