[package]
authors = ["Patrick \"Waaghals\" Berenschot <waaghals@protonmail.com>"]
edition = "2018"
homepage = "https://toip.dev"
license = "MIT"
name = "toip"
version = "0.1.0"
description = "Tool to install other tools as containers but run them as if they are installed regularly."

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
bytes = "1.0.1"
clap-verbosity-flag = "0.4.0"
directories = "4.0.1"
flate2 = "1.0.20"
futures-util = "0.3.15"
interprocess = "1.1.1"
log = "0.4.14"
nix = "0.22.0"
oci_spec = {git = "https://github.com/containers/oci-spec-rs", rev = "e0de21b89dc1e65f69a5f45a08bbe426787c7fa1"}
rand = "0.8.4"
regex = "1.5.4"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.66"
serde_yaml = "0.8.23"
sha2 = "0.9.5"
simplelog = "0.10.0"
clap = {version = "3.0.7", features = ["derive"]}
tar = "0.4.37"
termion = "1.5.6"
thiserror = "1.0.26"
tokio = {version = "1.8.1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "process"]}
tokio-stream = {version = "0.1.7", features = ["net", "io-util"]}
tokio-util = {version = "0.6.7", features = ["codec"]}
tower = "0.4.11"
tower-http = {version="0.2.0", features = ["follow-redirect", "decompression-full", "set-header", "trace", "util", "map-response-body"]}
hyper = {version = "0.14.6", features = ["client", "http1", "http2", "runtime", "stream"]}
http = "0.2.5"
const_format = { version="0.2.22", features = ["fmt"] }
hyper-rustls = {version = "0.23.0", features = ["http2"]}
itertools = "0.10.3"
hyper-trust-dns-connector = "0.3.0"
rm_rf = "0.6.1"
indicatif = {version="0.16.2", features=["improved_unicode"]}
progress-streams = "1.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
