[package]
authors = ["Patrick \"Waaghals\" Berenschot <waaghals@protonmail.com>"]
edition = "2018"
homepage = "https://toip.dev"
license = "MIT"
name = "toip"
version = "0.1.0"
description = "Tool to install other tools as containers but run them as if they are installed regularly."

[dependencies]
anyhow = "1.0"
async-trait = "0.1.52"
bytes = "1.0.1"
clap-verbosity-flag = "0.4.0"
directories = "4.0.1"
futures-util = "0.3.15"
log = "0.4.14"
regex = "1.5.4"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.66"
serde_yaml = "0.8.23"
sha2 = "0.9.5"
simplelog = "0.10.0"
clap = {version = "3.1.2", features = ["derive"]}
tokio = {version = "1.8.1", features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "process"]}
tokio-stream = {version = "0.1.7", features = ["net", "io-util"]}
tokio-util = {version = "0.6.7", features = ["codec"]}
itertools = "0.10.3"
which = "4.2.4"
subst = "0.1.0"
dotenv = "0.15.0"
uds = "0.2.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true
